--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
   "name": "twitterchile",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
+  "proxy": "http://localhost:3000/api",
   "dependencies": {
+    "add": "^2.0.6",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-actioncable-provider": "^2.0.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
+    "redux": "^4.0.4",
+    "redux-api-middleware": "^3.0.1",
+    "redux-form": "^8.2.6",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.19.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -28,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ws": "^3.3.2"
   }
 }
